# BaseCoreSocialistValues

./: .gitignore  Cargo.toml  LICENSE  README.md
base_core_socialist_values/: Cargo.toml  README.md
base_core_socialist_values/examples/: decoder.rs  encoder.rs
base_core_socialist_values/src/: lib.rs
bcsv/: Cargo.toml  README.md
bcsv/src/: bcsv.rs  main.rs
