[package]
name = "base_core_socialist_values"
version = "0.3.3"
authors = ["Hexilee <hexileee@gmail.com>", "YangKeao <keao.yang@yahoo.com>"]
edition = "2018"
description = "Encode and decode with BCSV (base core socialist values)"
license = "MIT"
repository = "https://github.com/QSCTech/BaseCoreSocialistValues"
keywords = ["encoding", "decoding"]
categories = ["encoding", "decoding"]
readme = "README.md"
documentation = "https://docs.rs/base_core_socialist_values"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

