[package]
name = "bcsv"
version = "0.1.4"
authors = ["Hexilee <hexileee@gmail.com>", "YangKeao <keao.yang@yahoo.com>"]
edition = "2018"
description = "CLI for base_core_socialist_values"
license = "MIT"
repository = "https://github.com/QSCTech/BaseCoreSocialistValues"
keywords = ["encoding", "decoding"]
categories = ["encoding", "decoding"]
readme = "README.md"

[dependencies]
clap = "2.33.0"
base_core_socialist_values = {path="../base_core_socialist_values", version="0.3"}
